<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:id="@+id/description"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/description"
        android:textAppearance="?android:attr/textAppearance"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description1"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/description1"
        android:textAppearance="?android:attr/textAppearance"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description2"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/description2"
        android:textAppearance="?android:attr/textAppearance"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/description3"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        android:text="@string/description3"
        android:textAppearance="?android:attr/textAppearance"
        android:paddingBottom="20dp"/>

    <Button
        android:id="@+id/startMapActivity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/startMapActivity"
        android:gravity="center"
        android:layout_gravity="end"/>
</LinearLayout>